--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,15 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "Milwad",
-            "email": "milwad.dev@gmail.com"
+            "name": "milwad-dev",
+            "email": "milwad.dev@gmail.com",
+            "role": "author",
+            "homepage": "https://github.com/milwad-dev"
+        },
+        {
+            "name": "binafy",
+            "role": "owner",
+            "homepage": "https://github.com/binafy"
         }
     ],
     "minimum-stability": "dev",
