--- a/composer.json
+++ b/composer.json
@@ -38,6 +38,12 @@
         "php": "^8.0",
         "laravel/framework": "^9.0|^10.0|^11.0"
     },
+    "config": {
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
+    },
     "extra": {
         "laravel": {
             "providers": [
