--- a/composer.json
+++ b/composer.json
@@ -35,12 +35,12 @@
         }
     },
     "require": {
-        "php": "^8.0",
-        "laravel/framework": "^9.0|^10.0|^11.0"
+        "php": "^8.1",
+        "laravel/framework": "^10.0|^11.0"
     },
     "require-dev": {
-        "pestphp/pest-plugin-laravel": "^1.4.0|^2.0.0",
-        "orchestra/testbench": "^7.0|^8.0|^9.0"
+        "pestphp/pest-plugin-laravel": "^2.0.0",
+        "orchestra/testbench": "^8.0|^9.0"
     },
     "config": {
         "sort-packages": true,
