--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "keywords": [
         "binafy",
         "milwad",
+        "php",
         "laravel",
         "framework",
         "artisan-finder",
