--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,8 @@
     },
     "require": {
         "php": "^8.1",
-        "laravel/framework": "^10.0|^11.0"
+        "laravel/framework": "^10.0|^11.0",
+        "laravel/prompts": "^0.2.0"
     },
     "require-dev": {
         "pestphp/pest-plugin-laravel": "^2.0.0",
