add some scripts

--- a/composer.json
+++ b/composer.json
@@ -57,6 +57,10 @@
             "pestphp/pest-plugin": true
         }
     },
+    "scripts": {
+        "test": "vendor/bin/pest",
+        "test-coverage": "vendor/bin/pest --coverage-html ./coverage"
+    },
     "extra": {
         "laravel": {
             "providers": [
